--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,13 @@
             android:exported="true">
 
         </activity>
+
+        <activity
+            android:name=".MainActivityCopy"
+            android:exported="true">
+
+        </activity>
+
     </application>
 
 </manifest>
