--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,8 +46,6 @@ android {
 
 dependencies {
 
-    //dependency for fragment
-    implementation("androidx.fragment:fragment-ktx:1.5.0")
 
 
     implementation 'androidx.core:core-ktx:1.8.0'
@@ -73,4 +71,28 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+
+
+    //dependency for fragment
+    implementation("androidx.fragment:fragment-ktx:1.5.0")
+
+    // Dependencies for navigation
+
+    implementation("androidx.navigation:navigation-fragment-ktx:2.5.0")
+    implementation("androidx.navigation:navigation-ui-ktx:2.5.0")
+
+    // Feature module Support
+    implementation("androidx.navigation:navigation-dynamic-features-fragment:2.5.0")
+
+    // Testing Navigation
+    androidTestImplementation("androidx.navigation:navigation-testing:2.5.0")
+
+    // Jetpack Compose Integration
+    implementation("androidx.navigation:navigation-compose:2.5.0")
+
+
+
+
+
 }
