--- a/app/build.gradle
+++ b/app/build.gradle
@@ -91,5 +91,7 @@ dependencies {
     // Jetpack Compose Integration
     implementation("androidx.navigation:navigation-compose:2.5.0")
 
-
+    // Circular icon
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+    //
 }
